--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Online Bus Pass Application</title>
+    <title>Online Bus Pass System</title>
     <!-- Add your CSS and JavaScript links here -->
     <link rel="stylesheet" href="{{ url_for('static', filename='fontawesome-5.5/css/all.min.css') }}" />
     <link rel="stylesheet" href="slick/slick.css">
@@ -19,7 +19,7 @@
       <nav class="navbar navbar-expand-md tm-navbar" id="tmNav">              
         <div class="container">   
           <div class="nav-link tm-nav-link">
-            <b>Online Bus Pass Application</b>
+            <b>Online Bus Pass System</b>
           </div>             
             
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -69,9 +69,11 @@
             <div class="tm-intro-text-container">
                 <h2 class="tm-text-primary mb-4 tm-section-title">Introduction</h2>
                 <p class="mb-4 tm-intro-text">
-                  Our website offers a <b>user-friendly and efficient platform for 
-                  Acquiring and managing MTC bus passes in metropolitan areas. 
-                  Enjoy hassle-free pass application, renewal, and payment options,</b>
+                  Our goal is to deliver a web-based Online Bus Pass Application System
+                  which is a technologically advanced and user-centric solution that not
+                  only simplifies the bus pass application process for passengers but
+                  also empowers transport authorities with valuable insights and
+                  efficient management tools.,</b>
                   All designed to enhance your public transportation experience.
               </p>
                 <p class="mb-5 tm-intro-text">
