--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -46,7 +46,7 @@
         <div class="tm-hero-text-container-inner">
             <h2 class="tm-hero-title"> <marquee> Online Bus Pass </marquee> </h2>
             <p class="tm-hero-subtitle">
-            <b>Online MTC Bus Pass System </b>
+            <b>Online Bus Pass System </b>
               <br />
             </p>
         </div>        
@@ -221,13 +221,13 @@
             </div>
             
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="tel:+91 9841750806" class="tm-contact-item-link">
+              <a href="tel:+91 9998989999 " class="tm-contact-item-link">
                   <i class="fas fa-3x fa-phone mr-4"></i>
                   <span class="mb-0"><strong>Call Us</strong></span>
               </a>              
             </div>
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
-              <a href="mailto:alwinkumar2002@gmail.com" class="tm-contact-item-link">
+              <a href="mailto:project2024@gmail.com" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
                   <span class="mb-0"><strong>buspassbooking@gmail.com</strong></span>
               </a>              
@@ -249,7 +249,7 @@
       </div>
       <footer class="text-center small tm-footer">
           <p class="mb-0">
-            &copy; <b>2023 Online Bus Pass Management System </b>
+            &copy; <b>2024 Online Bus Pass Management System </b>
           </p>
         </footer>
     </section>
